--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
              <button>جستجو</button>
         </form>
         <div id="weather"></div>
+        <div id="forecast"></div>
     </div>
     <script src="app.js"></script>
 </body>
